Pagina de cargos está exibindo a lista de cargos, mas o Sinatra ainda esta sendo utilizado de forma não modulariazada.

--- a/resources/page/cargos/index.rhtml
+++ b/resources/page/cargos/index.rhtml
@@ -6,8 +6,17 @@
 	<body>
 
 		Cargo
+		<table border="1">
+		<tr>
+			<td>Descrição</td>
+		</tr>
+		<tr>
+			<% for cargo in @entidades%>
+				<td><%=cargo.descricao%></td>
+			<%end%>
+		</tr>
+		</table>			
 		
-		<%=puts @entidades%>
 		
 	</body>
 
