--- a/resources/page/index.rhtml
+++ b/resources/page/index.rhtml
@@ -2,6 +2,7 @@
 
 	<head>
 		<title>Menu principal</title>
+		<script type="text/javascript" src="js/jquery.js"></script>
 	</head>
 	<body>
 
@@ -9,8 +10,7 @@
 		
 		<form method="get" name="formMenu">			
 			<input type="submit" value="Cargos" onclick="document.formMenu.action='/cargos'" />
-		</form>
-		
+		</form>			
 	</body>
 
 </html>
