--- a/resources/page/cargos/index.rhtml
+++ b/resources/page/cargos/index.rhtml
@@ -6,7 +6,7 @@
 	<body>
 
 		Cargo
-		<form method="get" name="formListagem">
+		<form name="formListagem">
 			<table border="1">
 				<tr>
 					<td>Código</td>
@@ -22,6 +22,7 @@
 					<td><%= cargo.descricao%></td>
 					<td>
 					<input type="submit" value="Editar" onclick="document.formListagem.action='/cargos/editar/<%= cargo.codigo%>'"  />
+					<input type="submit" value="Apagar" onclick="document.formListagem.action='/cargos/apagar/<%= cargo.codigo%>'"  />
 					</td>
 				</tr>
 				<%end%>
@@ -31,7 +32,7 @@
 			<input type="submit" value="Novo" onclick="document.formListagem.action='/cargos/criar'"  />
 
 		</form>
-
+	
 	</body>
 
 </html>
